<resources>
    <string name="app_name">Fitness_KZO</string>
    <string name="welcome_message">Welcome to Our App</string>
    <string name="welcome_subtitle">Experience the best mobile experience with our feature-rich application</string>
    <string name="get_started">Get Started</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="laps">Laps</string>
    <string name="swimming_icon">Swimming icon</string>
    <string name="back_button">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_fitness_targets">My Fitness Targets</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="weekly_workouts">Weekly Workouts</string>
    <string name="calorie_targets">Calorie Targets</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="swimming">Swimming</string>
    <string name="weightlifting">Weightlifting</string>
    <string name="yoga">Yoga</string>
    <string name="edit_targets">Edit Targets</string>
    <string name="kcal">kcal</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save Session</string>
    <string name="change_photo">Change Photo</string>
    <string name="stroke_type">Stroke Type</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="target_calories">Target Calories</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Logout</string>
    <string name="map_key">AIzaSyAaGDPu93sooBhuJx0Ik_snPuGWZnb7ygc</string>

    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>>
    <string name="save_workout">SAVE WORKOUT</string>

    <string name="duration">Duration:</string>
    <string name="intensity_level">Intensity Level:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save_session">Save Session</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="fill_duration">Please start the timer and have a duration greater than 0</string>
    <string name="workout_saved">Workout saved successfully!</string>
    <string name="error_saving">Error saving workout. Please try again.</string>
    <string name="calories_burned_w">Calories burned: %.1f</string>
    <string name="total_volume">Total Volume: %.1f kg</string>
    <string name="avg_weight">Avg Weight/Set: %.1f kg</string>
    <string name="avg_reps">Avg Reps/Set: %.1f</string>
</resources>